test(Helpers) : Move all piece representation logic to PieceRepresentationHelper and refactor TestDebugger / StatusDTOAssertion / FindDecisionHelper accordingly